# mlx-8-week3-mnist-visual-tranformers

./: .gitignore  README.md  pyproject.toml
model/: common.py  composite_dataset.py  continue_train.py  create_composite.py  create_composite_david.py  default_models.py  fix.py  inference.py  models.py  new_sweep.py  nick_sweep.py  run_on_gpu.sh  start_train.py  sweep.py  trainer.py
model/modules/: transformer.py
model/saved/: best2by2.pt  best4by4.pt  encoder-only-best.pt  encoder-only-big-best.pt  encoder-only-big.pt  encoder-only-bigger-best.pt  encoder-only-bigger.pt  encoder-only-positional-best.pt  encoder-only-positional-dropout-best.pt  encoder-only-positional-dropout.pt  encoder-only-positional.pt  encoder-only.pt  multi-digit-scrambled-best.pt  multi-digit-scrambled-v2-best.pt  multi-digit-scrambled-v2.pt  multi-digit-scrambled.pt  multi-digit-v1-best.pt  multi-digit-v1.pt  single-digit-v1-best.pt  single-digit-v1.pt
streamlit/: app.py
tests/: test_loading_speed.py
