[project]
name = "mlx-8-week2-two-towers-search"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "psycopg2-binary>=2.9.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.65.0",
    "datasets>=3.6.0",
    "pip>=25.1.1",
    "tldextract>=5.3.0",
    "wandb>=0.20.1",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.46.0",
    "redis>=6.2.0",
]

# https://docs.astral.sh/uv/concepts/projects/workspaces/
[tool.uv.workspace]
members = ["packages/*"]
